# CircuitPython_HX1230

./: LICENSE  README.rst  README.rst.license  hx1230.py  pyproject.toml  requirements.txt
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: hx1230_helloworld.py  hx1230_simpletest.py
