# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Mirac Gulgonul
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-hx1230"
description = "CircuitPython framebuf driver for HX1230 96x68 monochrome LCD displays using SPI."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/mlg556/CircuitPython_HX1230"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "hx1230",
    "hx1230",
    "lcd",
    "screen",
    "display",
    "driver",
    "framebuf",
    "nokia",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["hx1230"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
